--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <title>My Site</title>
 </head>
 
@@ -20,7 +20,7 @@
   <main>
     <section id="section1">
       <h1 class="center"><strong>My New Website</strong></h1>
-      <img src=".\assets\images\image_1.png" />
+      <img src="assets\images\image_1.png" />
       <h3 class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
     </section>
     <section id="section2">
